--- a/Telecom Customer Churn Prediction.ipynb
+++ b/Telecom Customer Churn Prediction.ipynb
@@ -2726,10 +2726,13 @@
     {
       "cell_type": "code",
       "source": [
+        "print('confusion_matrix :')\n",
         "print(confusion_matrix(y_test,lr_pred))\n",
         "print('\\n')\n",
+        "print('classification_report :')\n",
         "print(classification_report(y_test,lr_pred))\n",
         "print('\\n')\n",
+        "print('accuracy_score :')\n",
         "print(accuracy_score(y_test,lr_pred))"
       ],
       "metadata": {
@@ -2737,19 +2740,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tsED9yf3pSx-",
-        "outputId": "fb6b1d25-b3d0-4bc7-f71b-1935922db8e2"
+        "outputId": "9bd8be49-6cc9-4b07-96f0-e40f97ef871b"
       },
       "id": "tsED9yf3pSx-",
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "confusion_matrix :\n",
             "[[1391  148]\n",
             " [ 248  326]]\n",
             "\n",
             "\n",
+            "classification_report :\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "         0.0       0.85      0.90      0.88      1539\n",
@@ -2761,6 +2766,7 @@
             "\n",
             "\n",
             "\n",
+            "accuracy_score :\n",
             "0.812588736393753\n"
           ]
         }
@@ -3247,30 +3253,35 @@
     {
       "cell_type": "code",
       "source": [
+        "print('confusion_matrix :')\n",
         "print(confusion_matrix(y_test,rfc_pred))\n",
         "print('\\n')\n",
+        "print('classification_report :')\n",
         "print(classification_report(y_test,rfc_pred))\n",
         "print('\\n')\n",
+        "print('accuracy_score :')\n",
         "print(accuracy_score(y_test,rfc_pred))"
       ],
       "metadata": {
-        "id": "FU-nRRhUw8it",
-        "outputId": "00ae7135-40c0-496e-da38-edf6f66ee6d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FU-nRRhUw8it",
+        "outputId": "6b90b0f1-2515-4c03-86fb-b38b4798aac4"
       },
       "id": "FU-nRRhUw8it",
-      "execution_count": 40,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "confusion_matrix :\n",
             "[[1398  141]\n",
             " [ 297  277]]\n",
             "\n",
             "\n",
+            "classification_report :\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "         0.0       0.82      0.91      0.86      1539\n",
@@ -3282,6 +3293,7 @@
             "\n",
             "\n",
             "\n",
+            "accuracy_score :\n",
             "0.7927117841930904\n"
           ]
         }
